src/parser/punygram.output
Terminals unused in grammar

    NODENT
    VBAR
    AMPER
    ATEQUAL
    RARROW
    ELLIPSIS
    COLONEQUAL
    OP
    AWAIT
    ASYNC
    TYPE
    TYPE_IGNORE
    TYPE_COMMENT
    ERRORTOKEN
    COMMENT
    POUND_TYPE
    NL
    ENCODING
    NONE
    NONLOCAL


Grammar

    0 $accept: start $end

    1 start: file_input
    2      | single_input
    3      | encoding_decl

    4 single_input: NEWLINE
    5             | stmt

    6 file_input: star_NEWLINE_stmt ENDMARKER

    7 pick_NEWLINE_stmt: NEWLINE
    8                  | stmt

    9 star_NEWLINE_stmt: pick_NEWLINE_stmt star_NEWLINE_stmt
   10                  | ε

   11 decorator: AT dotted_name LPAR opt_arglist RPAR NEWLINE
   12          | AT dotted_name NEWLINE

   13 opt_arglist: arglist
   14            | ε

   15 decorators: decorator decorators
   16           | decorator

   17 decorated: decorators classdef
   18          | decorators funcdef

   19 funcdef: DEF NAME parameters COLON NEWLINE INDENT

   20 parameters: LPAR varargslist RPAR
   21           | LPAR RPAR

   22 varargslist: star_fpdef_COMMA pick_STAR_DOUBLESTAR
   23            | fpdef opt_EQUAL_test star_COMMA_fpdef

   24 opt_EQUAL_test: EQUAL test
   25               | ε

   26 star_fpdef_COMMA: fpdef opt_EQUAL_test COMMA star_fpdef_COMMA
   27                 | ε

   28 opt_DOUBLESTAR_NAME: COMMA DOUBLESTAR NAME
   29                    | ε

   30 pick_STAR_DOUBLESTAR: STAR NAME opt_DOUBLESTAR_NAME
   31                     | DOUBLESTAR NAME

   32 fpdef: NAME
   33      | LPAR fplist RPAR

   34 fplist: fpdef star_fpdef_notest

   35 stmt: simple_stmt
   36     | compound_stmt

   37 simple_stmt: small_stmt small_stmt_STAR_OR_SEMI NEWLINE

   38 small_stmt: expr_stmt
   39           | print_stmt
   40           | del_stmt
   41           | pass_stmt
   42           | flow_stmt
   43           | import_stmt
   44           | global_stmt
   45           | exec_stmt
   46           | assert_stmt

   47 expr_stmt: testlist augassign pick_yield_expr_testlist
   48          | testlist star_EQUAL

   49 pick_yield_expr_testlist: yield_expr
   50                         | testlist

   51 star_EQUAL: EQUAL pick_yield_expr_testlist star_EQUAL
   52           | ε

   53 augassign: PLUSEQUAL
   54          | MINEQUAL
   55          | STAREQUAL
   56          | SLASHEQUAL
   57          | PERCENTEQUAL
   58          | AMPEREQUAL
   59          | VBAREQUAL
   60          | CIRCUMFLEXEQUAL
   61          | LEFTSHIFTEQUAL
   62          | RIGHTSHIFTEQUAL
   63          | DOUBLESTAREQUAL
   64          | DOUBLESLASHEQUAL

   65 print_stmt: PRINT opt_test
   66           | PRINT RIGHTSHIFT test opt_test_2

   67 opt_test: test star_COMMA_test
   68         | ε

   69 opt_test_2: plus_COMMA_test
   70           | ε

   71 del_stmt: DEL exprlist

   72 pass_stmt: PASS

   73 flow_stmt: break_stmt
   74          | continue_stmt
   75          | return_stmt
   76          | raise_stmt
   77          | yield_stmt

   78 break_stmt: BREAK

   79 continue_stmt: CONTINUE

   80 return_stmt: RETURN testlist
   81            | RETURN

   82 yield_stmt: yield_expr

   83 raise_stmt: RAISE test opt_test_3
   84           | RAISE

   85 opt_COMMA_test: COMMA test
   86               | ε

   87 opt_test_3: COMMA test opt_COMMA_test
   88           | ε

   89 import_stmt: import_name
   90            | import_from

   91 import_name: IMPORT dotted_as_names

   92 import_from: FROM star_DOT dotted_name IMPORT pick_STAR_import
   93            | FROM plus_DOT IMPORT pick_STAR_import

   94 star_DOT: DOT star_DOT
   95         | ε

   96 plus_DOT: DOT plus_DOT
   97         | DOT

   98 pick_STAR_import: STAR
   99                 | LPAR import_as_names RPAR
  100                 | import_as_names

  101 import_as_name: NAME AS NAME
  102               | NAME

  103 dotted_as_name: dotted_name AS NAME
  104               | dotted_name

  105 import_as_names: import_as_name star_COMMA_import_as_name

  106 dotted_as_names: dotted_as_name
  107                | dotted_as_names COMMA dotted_as_name

  108 dotted_name: NAME
  109            | dotted_name DOT NAME

  110 global_stmt: global_stmt COMMA NAME
  111            | GLOBAL NAME

  112 exec_stmt: EXEC expr IN test opt_COMMA_test
  113          | EXEC expr

  114 assert_stmt: ASSERT test COMMA test
  115            | ASSERT test

  116 compound_stmt: if_stmt
  117              | while_stmt
  118              | for_stmt
  119              | try_stmt
  120              | with_stmt
  121              | funcdef
  122              | classdef
  123              | decorated

  124 if_stmt: IF test COLON suite star_ELIF ELSE COLON suite
  125        | IF test COLON suite star_ELIF

  126 star_ELIF: ELIF test COLON suite star_ELIF
  127          | ε

  128 while_stmt: WHILE test COLON suite ELSE COLON suite
  129           | WHILE test COLON suite

  130 for_stmt: FOR exprlist IN testlist COLON suite ELSE COLON suite
  131         | FOR exprlist IN testlist COLON suite

  132 try_stmt: TRY COLON suite plus_except opt_ELSE opt_FINALLY
  133         | TRY COLON suite FINALLY COLON suite

  134 plus_except: except_clause COLON suite plus_except
  135            | except_clause COLON suite

  136 opt_ELSE: ELSE COLON suite
  137         | ε

  138 opt_FINALLY: FINALLY COLON suite
  139            | ε

  140 with_stmt: WITH with_item star_COMMA_with_item COLON suite

  141 star_COMMA_with_item: COMMA with_item star_COMMA_with_item
  142                     | ε

  143 with_item: test AS expr
  144          | test

  145 except_clause: EXCEPT test opt_AS_COMMA
  146              | EXCEPT

  147 pick_AS_COMMA: AS
  148              | COMMA

  149 opt_AS_COMMA: pick_AS_COMMA test
  150             | ε

  151 suite: simple_stmt

  152 $@1: ε

  153 suite: NEWLINE INDENT $@1 plus_stmt DEDENT

  154 plus_stmt: stmt plus_stmt
  155          | stmt

  156 testlist_safe: old_test plus_COMMA_old_test
  157              | old_test

  158 old_test: or_test
  159         | old_lambdef

  160 old_lambdef: LAMBDA varargslist COLON old_test
  161            | LAMBDA COLON old_test

  162 test: or_test opt_IF_ELSE
  163     | lambdef

  164 opt_IF_ELSE: IF or_test ELSE test
  165            | ε

  166 or_test: and_test
  167        | or_test OR and_test

  168 and_test: not_test
  169         | and_test AND not_test

  170 not_test: NOT not_test
  171         | comparison

  172 comparison: expr
  173           | comparison comp_op expr

  174 comp_op: LESS
  175        | GREATER
  176        | EQEQUAL
  177        | GREATEREQUAL
  178        | LESSEQUAL
  179        | GRLT
  180        | NOTEQUAL
  181        | IN
  182        | NOT IN
  183        | IS
  184        | IS NOT

  185 expr: xor_expr
  186     | expr BAR xor_expr

  187 xor_expr: and_expr
  188         | xor_expr CIRCUMFLEX and_expr

  189 and_expr: shift_expr
  190         | and_expr AMPERSAND shift_expr

  191 shift_expr: arith_expr
  192           | shift_expr pick_LEFTSHIFT_RIGHTSHIFT arith_expr

  193 pick_LEFTSHIFT_RIGHTSHIFT: LEFTSHIFT
  194                          | RIGHTSHIFT

  195 arith_expr: term
  196           | arith_expr pick_PLUS_MINUS term

  197 pick_PLUS_MINUS: PLUS
  198                | MINUS

  199 term: factor
  200     | term pick_multop factor

  201 pick_multop: STAR
  202            | AT
  203            | SLASH
  204            | PERCENT
  205            | DOUBLESLASH

  206 factor: pick_unop factor
  207       | power

  208 pick_unop: PLUS
  209          | MINUS
  210          | TILDE

  211 power: atom star_trailer DOUBLESTAR factor
  212      | atom star_trailer

  213 star_trailer: trailer star_trailer
  214             | ε

  215 atom: LPAR opt_yield_test RPAR
  216     | LSQB opt_listmaker RSQB
  217     | LBRACE opt_dictorsetmaker RBRACE
  218     | BACKQUOTE testlist1 BACKQUOTE
  219     | NAME
  220     | NUMBER
  221     | TRUE
  222     | FALSE
  223     | plus_STRING

  224 pick_yield_expr_testlist_comp: yield_expr
  225                              | testlist_comp

  226 opt_yield_test: pick_yield_expr_testlist_comp
  227               | ε

  228 opt_listmaker: listmaker
  229              | ε

  230 opt_dictorsetmaker: dictorsetmaker
  231                   | ε

  232 plus_STRING: STRING plus_STRING
  233            | STRING

  234 listmaker: test list_for
  235          | test star_COMMA_test

  236 testlist_comp: test comp_for
  237              | test star_COMMA_test

  238 lambdef: LAMBDA varargslist COLON test
  239        | LAMBDA COLON test

  240 trailer: LPAR opt_arglist RPAR
  241        | LSQB subscriptlist RSQB
  242        | DOT NAME

  243 subscriptlist: subscript star_COMMA_subscript

  244 subscript: DOT DOT DOT
  245          | test
  246          | opt_test_only COLON opt_test_only opt_sliceop

  247 opt_test_only: test
  248              | ε

  249 opt_sliceop: sliceop
  250            | ε

  251 sliceop: COLON test
  252        | COLON

  253 exprlist: expr star_COMMA_expr

  254 testlist: test star_COMMA_test

  255 dictorsetmaker: test COLON test pick_comp_for
  256               | test pick_for_test

  257 pick_comp_for: comp_for
  258              | star_test_COLON_test

  259 pick_for_test: comp_for
  260              | star_COMMA_test

  261 classdef: CLASS NAME LPAR opt_testlist RPAR COLON suite
  262         | CLASS NAME COLON suite

  263 opt_testlist: testlist
  264             | ε

  265 arglist: argument COMMA arglist
  266        | argument COMMA
  267        | argument
  268        | listarg COMMA arglist_postlist
  269        | listarg
  270        | dictarg

  271 argument: test opt_comp_for
  272         | test EQUAL test

  273 opt_comp_for: comp_for
  274             | ε

  275 list_iter: list_for
  276          | list_if

  277 list_for: FOR exprlist IN testlist_safe list_iter
  278         | FOR exprlist IN testlist_safe

  279 list_if: IF old_test list_iter
  280        | IF old_test

  281 comp_iter: comp_for
  282          | comp_if

  283 comp_for: FOR exprlist IN or_test comp_iter
  284         | FOR exprlist IN or_test

  285 comp_if: IF old_test comp_iter
  286        | IF old_test

  287 testlist1: test
  288          | testlist1 COMMA test

  289 encoding_decl: NAME

  290 yield_expr: YIELD testlist
  291           | YIELD

  292 star_fpdef_notest: COMMA fpdef star_fpdef_notest
  293                  | COMMA
  294                  | ε

  295 star_COMMA_expr: COMMA expr star_COMMA_expr
  296                | COMMA
  297                | ε

  298 star_COMMA_fpdef: COMMA fpdef opt_EQUAL_test star_COMMA_fpdef
  299                 | COMMA
  300                 | ε

  301 star_COMMA_test: COMMA test star_COMMA_test
  302                | COMMA
  303                | ε

  304 star_test_COLON_test: COMMA test COLON test star_test_COLON_test
  305                     | COMMA
  306                     | ε

  307 star_COMMA_subscript: COMMA subscript star_COMMA_subscript
  308                     | COMMA
  309                     | ε

  310 star_COMMA_import_as_name: COMMA import_as_name star_COMMA_import_as_name
  311                          | COMMA
  312                          | ε

  313 plus_COMMA_test: COMMA test plus_COMMA_test
  314                | COMMA test COMMA
  315                | COMMA test

  316 plus_COMMA_old_test: COMMA old_test plus_COMMA_old_test
  317                    | COMMA old_test COMMA
  318                    | COMMA old_test

  319 dictarg: DOUBLESTAR test

  320 listarg: STAR test

  321 arglist_postlist: argument COMMA arglist_postlist
  322                 | dictarg
  323                 | argument

  324 small_stmt_STAR_OR_SEMI: SEMI small_stmt small_stmt_STAR_OR_SEMI
  325                        | SEMI
  326                        | ε


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    AMPEREQUAL <ast> (258) 58
    AMPERSAND <ast> (259) 190
    AND <ast> (260) 169
    AS <ast> (261) 101 103 143 147
    ASSERT <ast> (262) 114 115
    AT <ast> (263) 11 12 202
    BAR <ast> (264) 186
    BREAK <ast> (265) 78
    CIRCUMFLEX <ast> (266) 188
    CIRCUMFLEXEQUAL <ast> (267) 60
    CLASS <ast> (268) 261 262
    COLON <ast> (269) 19 124 125 126 128 129 130 131 132 133 134 135 136 138 140 160 161 238 239 246 251 252 255 261 262 304
    COMMA <ast> (270) 26 28 85 87 107 110 114 141 148 265 266 268 288 292 293 295 296 298 299 301 302 304 305 307 308 310 311 313 314 315 316 317 318 321
    CONTINUE <ast> (271) 79
    DEDENT <ast> (272) 153
    DEF <ast> (273) 19
    DEL <ast> (274) 71
    DOT <ast> (275) 94 96 97 109 242 244
    DOUBLESLASH <ast> (276) 205
    DOUBLESLASHEQUAL <ast> (277) 64
    DOUBLESTAR <ast> (278) 28 31 211 319
    DOUBLESTAREQUAL <ast> (279) 63
    ELIF <ast> (280) 126
    ELSE <ast> (281) 124 128 130 136 164
    ENDMARKER <ast> (282) 6
    EQEQUAL <ast> (283) 176
    EQUAL <ast> (284) 24 51 272
    EXCEPT <ast> (285) 145 146
    EXEC <ast> (286) 112 113
    FINALLY <ast> (287) 133 138
    FOR <ast> (288) 130 131 277 278 283 284
    FROM <ast> (289) 92 93
    GLOBAL <ast> (290) 111
    GREATER <ast> (291) 175
    GREATEREQUAL <ast> (292) 177
    GRLT <ast> (293) 179
    IF <ast> (294) 124 125 164 279 280 285 286
    IMPORT <ast> (295) 91 92 93
    IN <ast> (296) 112 130 131 181 182 277 278 283 284
    INDENT <ast> (297) 19 153
    IS <ast> (298) 183 184
    LEFTSHIFT <ast> (299) 193
    LEFTSHIFTEQUAL <ast> (300) 61
    LESS <ast> (301) 174
    LESSEQUAL <ast> (302) 178
    LPAR <ast> (303) 11 20 21 33 99 215 240 261
    MINUS <ast> (304) 198 209
    MINEQUAL <ast> (305) 54
    NEWLINE <ast> (306) 4 7 11 12 19 37 153
    NOTEQUAL <ast> (307) 180
    OR <ast> (308) 167
    PASS <ast> (309) 72
    PERCENT <ast> (310) 204
    PERCENTEQUAL <ast> (311) 57
    PLUS <ast> (312) 197 208
    PLUSEQUAL <ast> (313) 53
    PRINT <ast> (314) 65 66
    RAISE <ast> (315) 83 84
    RBRACE <ast> (316) 217
    RETURN <ast> (317) 80 81
    RIGHTSHIFT <ast> (318) 66 194
    RIGHTSHIFTEQUAL <ast> (319) 62
    RPAR <ast> (320) 11 20 21 33 99 215 240 261
    RSQB <ast> (321) 216 241
    SEMI <ast> (322) 324 325
    SLASH <ast> (323) 203
    SLASHEQUAL <ast> (324) 56
    STAR <ast> (325) 30 98 201 320
    STAREQUAL <ast> (326) 55
    TRY <ast> (327) 132 133
    VBAREQUAL <ast> (328) 59
    WHILE <ast> (329) 128 129
    WITH <ast> (330) 140
    LSQB <ast> (331) 216 241
    LBRACE <ast> (332) 217
    BACKQUOTE <ast> (333) 218
    STRING <ast> (334) 232 233
    LAMBDA <ast> (335) 160 161 238 239
    YIELD <ast> (336) 290 291
    NOT <ast> (337) 170 182 184
    NUMBER <ast> (338) 220
    NAME <ast> (339) 19 28 30 31 32 101 102 103 108 109 110 111 219 242 261 262 289
    TILDE <ast> (340) 210
    NODENT <ast> (341)
    VBAR <ast> (342)
    AMPER <ast> (343)
    ATEQUAL <ast> (344)
    RARROW <ast> (345)
    ELLIPSIS <ast> (346)
    COLONEQUAL <ast> (347)
    OP <ast> (348)
    AWAIT <ast> (349)
    ASYNC <ast> (350)
    TYPE <ast> (351)
    TYPE_IGNORE <ast> (352)
    TYPE_COMMENT <ast> (353)
    ERRORTOKEN <ast> (354)
    COMMENT <ast> (355)
    POUND_TYPE <ast> (356)
    NL <ast> (357)
    ENCODING <ast> (358)
    NONE <ast> (359)
    FALSE <ast> (360) 222
    TRUE <ast> (361) 221
    NONLOCAL <ast> (362)


Nonterminals, with rules where they appear

    $accept (108)
        on left: 0
    start <ast> (109)
        on left: 1 2 3
        on right: 0
    single_input <ast> (110)
        on left: 4 5
        on right: 2
    file_input <ast> (111)
        on left: 6
        on right: 1
    pick_NEWLINE_stmt <ast> (112)
        on left: 7 8
        on right: 9
    star_NEWLINE_stmt <ast> (113)
        on left: 9 10
        on right: 6 9
    decorator <ast> (114)
        on left: 11 12
        on right: 15 16
    opt_arglist (115)
        on left: 13 14
        on right: 11 240
    decorators <ast> (116)
        on left: 15 16
        on right: 15 17 18
    decorated <ast> (117)
        on left: 17 18
        on right: 123
    funcdef <ast> (118)
        on left: 19
        on right: 18 121
    parameters <ast> (119)
        on left: 20 21
        on right: 19
    varargslist <ast> (120)
        on left: 22 23
        on right: 20 160 238
    opt_EQUAL_test <ast> (121)
        on left: 24 25
        on right: 23 26 298
    star_fpdef_COMMA <ast> (122)
        on left: 26 27
        on right: 22 26
    opt_DOUBLESTAR_NAME (123)
        on left: 28 29
        on right: 30
    pick_STAR_DOUBLESTAR (124)
        on left: 30 31
        on right: 22
    fpdef <ast> (125)
        on left: 32 33
        on right: 23 26 34 292 298
    fplist <ast> (126)
        on left: 34
        on right: 33
    stmt <ast> (127)
        on left: 35 36
        on right: 5 8 154 155
    simple_stmt <ast> (128)
        on left: 37
        on right: 35 151
    small_stmt <ast> (129)
        on left: 38 39 40 41 42 43 44 45 46
        on right: 37 324
    expr_stmt <ast> (130)
        on left: 47 48
        on right: 38
    pick_yield_expr_testlist <ast> (131)
        on left: 49 50
        on right: 47 51
    star_EQUAL <ast> (132)
        on left: 51 52
        on right: 48 51
    augassign <ast> (133)
        on left: 53 54 55 56 57 58 59 60 61 62 63 64
        on right: 47
    print_stmt <ast> (134)
        on left: 65 66
        on right: 39
    opt_test <ast> (135)
        on left: 67 68
        on right: 65
    opt_test_2 <ast> (136)
        on left: 69 70
        on right: 66
    del_stmt <ast> (137)
        on left: 71
        on right: 40
    pass_stmt <ast> (138)
        on left: 72
        on right: 41
    flow_stmt <ast> (139)
        on left: 73 74 75 76 77
        on right: 42
    break_stmt <ast> (140)
        on left: 78
        on right: 73
    continue_stmt <ast> (141)
        on left: 79
        on right: 74
    return_stmt <ast> (142)
        on left: 80 81
        on right: 75
    yield_stmt <ast> (143)
        on left: 82
        on right: 77
    raise_stmt <ast> (144)
        on left: 83 84
        on right: 76
    opt_COMMA_test (145)
        on left: 85 86
        on right: 87 112
    opt_test_3 (146)
        on left: 87 88
        on right: 83
    import_stmt <ast> (147)
        on left: 89 90
        on right: 43
    import_name <ast> (148)
        on left: 91
        on right: 89
    import_from <ast> (149)
        on left: 92 93
        on right: 90
    star_DOT (150)
        on left: 94 95
        on right: 92 94
    plus_DOT (151)
        on left: 96 97
        on right: 93 96
    pick_STAR_import (152)
        on left: 98 99 100
        on right: 92 93
    import_as_name (153)
        on left: 101 102
        on right: 105 310
    dotted_as_name <ast> (154)
        on left: 103 104
        on right: 106 107
    import_as_names (155)
        on left: 105
        on right: 99 100
    dotted_as_names <ast> (156)
        on left: 106 107
        on right: 91 107
    dotted_name <ast> (157)
        on left: 108 109
        on right: 11 12 92 103 104 109
    global_stmt <ast> (158)
        on left: 110 111
        on right: 44 110
    exec_stmt <ast> (159)
        on left: 112 113
        on right: 45
    assert_stmt <ast> (160)
        on left: 114 115
        on right: 46
    compound_stmt <ast> (161)
        on left: 116 117 118 119 120 121 122 123
        on right: 36
    if_stmt <ast> (162)
        on left: 124 125
        on right: 116
    star_ELIF (163)
        on left: 126 127
        on right: 124 125 126
    while_stmt <ast> (164)
        on left: 128 129
        on right: 117
    for_stmt <ast> (165)
        on left: 130 131
        on right: 118
    try_stmt <ast> (166)
        on left: 132 133
        on right: 119
    plus_except (167)
        on left: 134 135
        on right: 132 134
    opt_ELSE (168)
        on left: 136 137
        on right: 132
    opt_FINALLY (169)
        on left: 138 139
        on right: 132
    with_stmt <ast> (170)
        on left: 140
        on right: 120
    star_COMMA_with_item (171)
        on left: 141 142
        on right: 140 141
    with_item (172)
        on left: 143 144
        on right: 140 141
    except_clause (173)
        on left: 145 146
        on right: 134 135
    pick_AS_COMMA (174)
        on left: 147 148
        on right: 149
    opt_AS_COMMA (175)
        on left: 149 150
        on right: 145
    suite <ast> (176)
        on left: 151 153
        on right: 124 125 126 128 129 130 131 132 133 134 135 136 138 140 261 262
    $@1 (177)
        on left: 152
        on right: 153
    plus_stmt <ast> (178)
        on left: 154 155
        on right: 153 154
    testlist_safe (179)
        on left: 156 157
        on right: 277 278
    old_test (180)
        on left: 158 159
        on right: 156 157 160 161 279 280 285 286 316 317 318
    old_lambdef (181)
        on left: 160 161
        on right: 159
    test <ast> (182)
        on left: 162 163
        on right: 24 66 67 83 85 87 112 114 115 124 125 126 128 129 143 144 145 149 164 234 235 236 237 238 239 245 247 251 254 255 256 271 272 287 288 301 304 313 314 315 319 320
    opt_IF_ELSE <ast> (183)
        on left: 164 165
        on right: 162
    or_test <ast> (184)
        on left: 166 167
        on right: 158 162 164 167 283 284
    and_test <ast> (185)
        on left: 168 169
        on right: 166 167 169
    not_test <ast> (186)
        on left: 170 171
        on right: 168 169 170
    comparison <ast> (187)
        on left: 172 173
        on right: 171 173
    comp_op (188)
        on left: 174 175 176 177 178 179 180 181 182 183 184
        on right: 173
    expr <ast> (189)
        on left: 185 186
        on right: 112 113 143 172 173 186 253 295
    xor_expr <ast> (190)
        on left: 187 188
        on right: 185 186 188
    and_expr <ast> (191)
        on left: 189 190
        on right: 187 188 190
    shift_expr <ast> (192)
        on left: 191 192
        on right: 189 190 192
    pick_LEFTSHIFT_RIGHTSHIFT (193)
        on left: 193 194
        on right: 192
    arith_expr <ast> (194)
        on left: 195 196
        on right: 191 192 196
    pick_PLUS_MINUS <ast> (195)
        on left: 197 198
        on right: 196
    term <ast> (196)
        on left: 199 200
        on right: 195 196 200
    pick_multop <ast> (197)
        on left: 201 202 203 204 205
        on right: 200
    factor <ast> (198)
        on left: 206 207
        on right: 199 200 206 211
    pick_unop <ast> (199)
        on left: 208 209 210
        on right: 206
    power <ast> (200)
        on left: 211 212
        on right: 207
    star_trailer <ast> (201)
        on left: 213 214
        on right: 211 212 213
    atom <ast> (202)
        on left: 215 216 217 218 219 220 221 222 223
        on right: 211 212
    pick_yield_expr_testlist_comp <ast> (203)
        on left: 224 225
        on right: 226
    opt_yield_test <ast> (204)
        on left: 226 227
        on right: 215
    opt_listmaker (205)
        on left: 228 229
        on right: 216
    opt_dictorsetmaker (206)
        on left: 230 231
        on right: 217
    plus_STRING <ast> (207)
        on left: 232 233
        on right: 223 232
    listmaker (208)
        on left: 234 235
        on right: 228
    testlist_comp <ast> (209)
        on left: 236 237
        on right: 225
    lambdef <ast> (210)
        on left: 238 239
        on right: 163
    trailer (211)
        on left: 240 241 242
        on right: 213
    subscriptlist (212)
        on left: 243
        on right: 241
    subscript (213)
        on left: 244 245 246
        on right: 243 307
    opt_test_only (214)
        on left: 247 248
        on right: 246
    opt_sliceop (215)
        on left: 249 250
        on right: 246
    sliceop (216)
        on left: 251 252
        on right: 249
    exprlist (217)
        on left: 253
        on right: 71 130 131 277 278 283 284
    testlist <ast> (218)
        on left: 254
        on right: 47 48 50 80 130 131 263 290
    dictorsetmaker (219)
        on left: 255 256
        on right: 230
    pick_comp_for (220)
        on left: 257 258
        on right: 255
    pick_for_test (221)
        on left: 259 260
        on right: 256
    classdef <ast> (222)
        on left: 261 262
        on right: 17 122
    opt_testlist (223)
        on left: 263 264
        on right: 261
    arglist (224)
        on left: 265 266 267 268 269 270
        on right: 13 265
    argument (225)
        on left: 271 272
        on right: 265 266 267 321 323
    opt_comp_for (226)
        on left: 273 274
        on right: 271
    list_iter (227)
        on left: 275 276
        on right: 277 279
    list_for (228)
        on left: 277 278
        on right: 234 275
    list_if (229)
        on left: 279 280
        on right: 276
    comp_iter (230)
        on left: 281 282
        on right: 283 285
    comp_for (231)
        on left: 283 284
        on right: 236 257 259 273 281
    comp_if (232)
        on left: 285 286
        on right: 282
    testlist1 (233)
        on left: 287 288
        on right: 218 288
    encoding_decl <ast> (234)
        on left: 289
        on right: 3
    yield_expr <ast> (235)
        on left: 290 291
        on right: 49 82 224
    star_fpdef_notest <ast> (236)
        on left: 292 293 294
        on right: 34 292
    star_COMMA_expr (237)
        on left: 295 296 297
        on right: 253 295
    star_COMMA_fpdef <ast> (238)
        on left: 298 299 300
        on right: 23 298
    star_COMMA_test <ast> (239)
        on left: 301 302 303
        on right: 67 235 237 254 260 301
    star_test_COLON_test (240)
        on left: 304 305 306
        on right: 258 304
    star_COMMA_subscript (241)
        on left: 307 308 309
        on right: 243 307
    star_COMMA_import_as_name (242)
        on left: 310 311 312
        on right: 105 310
    plus_COMMA_test <ast> (243)
        on left: 313 314 315
        on right: 69 313
    plus_COMMA_old_test (244)
        on left: 316 317 318
        on right: 156 316
    dictarg (245)
        on left: 319
        on right: 270 322
    listarg (246)
        on left: 320
        on right: 268 269
    arglist_postlist (247)
        on left: 321 322 323
        on right: 268 321
    small_stmt_STAR_OR_SEMI <ast> (248)
        on left: 324 325 326
        on right: 37 324


State 0

    0 $accept: • start $end

    ASSERT     shift, and go to state 1
    AT         shift, and go to state 2
    BREAK      shift, and go to state 3
    CLASS      shift, and go to state 4
    CONTINUE   shift, and go to state 5
    DEF        shift, and go to state 6
    DEL        shift, and go to state 7
    EXEC       shift, and go to state 8
    FOR        shift, and go to state 9
    FROM       shift, and go to state 10
    GLOBAL     shift, and go to state 11
    IF         shift, and go to state 12
    IMPORT     shift, and go to state 13
    LPAR       shift, and go to state 14
    MINUS      shift, and go to state 15
    NEWLINE    shift, and go to state 16
    PASS       shift, and go to state 17
    PLUS       shift, and go to state 18
    PRINT      shift, and go to state 19
    RAISE      shift, and go to state 20
    RETURN     shift, and go to state 21
    TRY        shift, and go to state 22
    WHILE      shift, and go to state 23
    WITH       shift, and go to state 24
    LSQB       shift, and go to state 25
    LBRACE     shift, and go to state 26
    BACKQUOTE  shift, and go to state 27
    STRING     shift, and go to state 28
    LAMBDA     shift, and go to state 29
    YIELD      shift, and go to state 30
    NOT        shift, and go to state 31
    NUMBER     shift, and go to state 32
    NAME       shift, and go to state 33
    TILDE      shift, and go to state 34
    FALSE      shift, and go to state 35
    TRUE       shift, and go to state 36

    $default  reduce using rule 10 (star_NEWLINE_stmt)

    start              go to state 37
    single_input       go to state 38
    file_input         go to state 39
    pick_NEWLINE_stmt  go to state 40
    star_NEWLINE_stmt  go to state 41
    decorator          go to state 42
    decorators         go to state 43
    decorated          go to state 44
    funcdef            go to state 45
    stmt               go to state 46
    simple_stmt        go to state 47
    small_stmt         go to state 48
    expr_stmt          go to state 49
    print_stmt         go to state 50
    del_stmt           go to state 51
    pass_stmt          go to state 52
    flow_stmt          go to state 53
    break_stmt         go to state 54
    continue_stmt      go to state 55
    return_stmt        go to state 56
    yield_stmt         go to state 57
    raise_stmt         go to state 58
    import_stmt        go to state 59
    import_name        go to state 60
    import_from        go to state 61
    global_stmt        go to state 62
    exec_stmt          go to state 63
    assert_stmt        go to state 64
    compound_stmt      go to state 65
    if_stmt            go to state 66
    while_stmt         go to state 67
    for_stmt           go to state 68
    try_stmt           go to state 69
    with_stmt          go to state 70
    test               go to state 71
    or_test            go to state 72
    and_test           go to state 73
    not_test           go to state 74
    comparison         go to state 75
    expr               go to state 76
    xor_expr           go to state 77
    and_expr           go to state 78
    shift_expr         go to state 79
    arith_expr         go to state 80
    term               go to state 81
    factor             go to state 82
    pick_unop          go to state 83
    power              go to state 84
    atom               go to state 85
    plus_STRING        go to state 86
    lambdef            go to state 87
    testlist           go to state 88
    classdef           go to state 89
    encoding_decl      go to state 90
    yield_expr         go to state 91


State 1

  114 assert_stmt: ASSERT • test COMMA test
  115            | ASSERT • test

    LPAR       shift, and go to state 14
    MINUS      shift, and go to state 15
    PLUS       shift, and go to state 18
    LSQB       shift, and go to state 25
    LBRACE     shift, and go to state 26
    BACKQUOTE  shift, and go to state 27
    STRING     shift, and go to state 28
    LAMBDA     shift, and go to state 29
    NOT        shift, and go to state 31
    NUMBER     shift, and go to state 32
    NAME       shift, and go to state 92
    TILDE      shift, and go to state 34
    FALSE      shift, and go to state 35
    TRUE       shift, and go to state 36

    test         go to state 93
    or_test      go to state 72
    and_test     go to state 73
    not_test     go to state 74
    comparison   go to state 75
    expr         go to state 76
    xor_expr     go to state 77
    and_expr     go to state 78
    shift_expr   go to state 79
    arith_expr   go to state 80
    term         go to state 81
    factor       go to state 82
    pick_unop    go to state 83
    power        go to state 84
    atom         go to state 85
    plus_STRING  go to state 86
    lambdef      go to state 87


State 2

   11 decorator: AT • dotted_name LPAR opt_arglist RPAR NEWLINE
   12          | AT • dotted_name NEWLINE

    NAME  shift, and go to state 94

    dotted_name  go to state 95


State 3

   78 break_stmt: BREAK •

    $default  reduce using rule 78 (break_stmt)


State 4

  261 classdef: CLASS • NAME LPAR opt_testlist RPAR COLON suite
  262         | CLASS • NAME COLON suite

    NAME  shift, and go to state 96


State 5

   79 continue_stmt: CONTINUE •

    $default  reduce using rule 79 (continue_stmt)


State 6

   19 funcdef: DEF • NAME parameters COLON NEWLINE INDENT

    NAME  shift, and go to state 97


State 7

   71 del_stmt: DEL • exprlist

    LPAR       shift, and go to state 14
    MINUS      shift, and go to state 15
    PLUS       shift, and go to state 18
    LSQB       shift, and go to state 25
    LBRACE     shift, and go to state 26
    BACKQUOTE  shift, and go to state 27
    STRING     shift, and go to state 28
    NUMBER     shift, and go to state 32
    NAME       shift, and go to state 92
    TILDE      shift, and go to state 34
    FALSE      shift, and go to state 35
    TRUE       shift, and go to state 36

    expr         go to state 98
    xor_expr     go to state 77
    and_expr     go to state 78
    shift_expr   go to state 79
    arith_expr   go to state 80
    term         go to state 81
    factor       go to state 82
    pick_unop    go to state 83
    power        go to state 84
    atom         go to state 85
    plus_STRING  go to state 86
    exprlist     go to state 99


State 8

  112 exec_stmt: EXEC • expr IN test opt_COMMA_test
  113          | EXEC • expr

    LPAR       shift, and go to state 14
    MINUS      shift, and go to state 15
    PLUS       shift, and go to state 18
    LSQB       shift, and go to state 25
    LBRACE     shift, and go to state 26
    BACKQUOTE  shift, and go to state 27
    STRING     shift, and go to state 28
    NUMBER     shift, and go to state 32
    NAME       shift, and go to state 92
    TILDE      shift, and go to state 34
    FALSE      shift, and go to state 35
    TRUE       shift, and go to state 36
